@@ -1,3 +1,8 @@
+2004-12-20  Alexander Larsson  <alexl@redhat.com>
+
+	* src/cairo_xlib_surface.c (_cairo_xlib_surface_create_with_size):
+	Fix bug in earlier change.
+
 2004-12-20  Carl Worth  <cworth@cworth.org>
 
 	* src/cairoint.h: Re-enabled __internal_linkage for all internal
